src/index.scss
$base-color: #333;
$primary-color: #00FA9A;

body {
  margin: 0;
  padding: 0;
  font-family: 'Tajawal', sans-serif;
  font-size: 18px;
  font-weight: 400;
  color: $base-color;
  background: #fdfcfb; /* Old browsers */
background: -moz-linear-gradient(-45deg, #fdfcfb 0%, #e2d1c3 100%); /* FF3.6-15 */
background: -webkit-linear-gradient(-45deg, #fdfcfb 0%,#e2d1c3 100%); /* Chrome10-25,Safari5.1-6 */
background: linear-gradient(135deg, #fdfcfb 0%,#e2d1c3 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fdfcfb', endColorstr='#e2d1c3',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
min-height: 100vh;
}

@keyframes haikuFlash {
	0% { color: $base-color; }
	10% {color: $primary-color;}
	100% {color: $base-color;}
}

.appTitle{
	font-family: 'Kaushan Script', cursive;
	font-size: 4em;
	color: #8b0000;
	margin: 10px;
}

.appTitleContainer {
	
	padding: 10px;
	width: 100%;
	text-align: center;
}

.scrollContainer {
	width: 365px;
	margin: 10% auto;
	padding:15px;
	
}

.messageContainer {
	background: white;
	padding: 10px;
	font-size: 1.3em;
	max-height: 300px; /* reasonable estimate */
    overflow-y: auto; /* show scrollbar only when text overflows vertically */
    position: relative;
}

.messageContainerBuffer {
	height: 300px;
}

.message {
	border-bottom: 1px solid #f2f2f2;
}

input {
	width: 100%;
	font-size: 2em;
}
.submitButton {
	width: 100%;
	font-size: 2em;
	padding:10px;
	height: 46px;
}


.flex-grid {
	display: flex;
	justify-content: space-between;
	flex-wrap: wrap;
}

.col {
	flex: 1;
}

.flex-grid .col {
	flex-basis: 32%;
	max-width: 400px;
}

@media(max-width: 500px) {
	.flex-grid .col {
		flex-basis: 100%;
		max-width: none;
	}

	.scrollContainer {
		width: 95%;
		padding: 2px;
		
	}
}

.isHaiku {
	animation: haikuFlash 7s;
}

.haikuBox {
	
	margin: 10px;
}

.haikuBody {
	
	margin: 2px;
	padding: 10px;
}

.haikuDate {
	
	margin: 2px;
	color: #C0C0C0;
}

